--- a/index.html
+++ b/index.html
@@ -88,8 +88,8 @@
                       <div class="about-info">
                         <p><span class="title-s">Name: </span> <span>Elton Vrajolli</span></p>
                         <p><span class="title-s">Profile: </span> <span>full stack developer</span></p>
-                        <p><span class="title-s">Email: </span> <span>eltonvrajolli0@gmail.com</span></p>
-                        <p><span class="title-s">Phone: </span> <span>+383(43)809-069</span></p>
+                        <p><span class="title-s">Email: </span> <span></span></p>
+                        <p><span class="title-s">Phone: </span> <span></span></p>
                       </div>
                     </div>
                   </div>
