--- a/index.html
+++ b/index.html
@@ -88,8 +88,8 @@
                       <div class="about-info">
                         <p><span class="title-s">Name: </span> <span>Elton Vrajolli</span></p>
                         <p><span class="title-s">Profile: </span> <span>full stack developer</span></p>
-                        <p><span class="title-s">Email: </span> <span></span></p>
-                        <p><span class="title-s">Phone: </span> <span></span></p>
+                        <p><span class="title-s">Email: </span><span>eltonvrajolli0@gmail.com</span></p>
+                        <p><span class="title-s">Phone: </span><span>+38343809069</span></p>
                       </div>
                     </div>
                   </div>
@@ -127,7 +127,7 @@
                       As a child I started in different fields trying to find myself where in some of them I also had the talent but I continued with Programming which is a field that has pleased me so far.                  
                     </p>
                     <p class="lead">
-                      I am an 18 year old trying to become a web developer now I am close to taking the course I am taking at Proed Academy for web development full stack.                          </p>
+                      I am an 18 year old trying to become a web developer. I already finished a course at Proed Academy for web development full stack.</p>
                   </div>
                 </div>
               </div>
