--- a/index.html
+++ b/index.html
@@ -257,9 +257,9 @@
                         mollitia inventore?
                       </p>
                       <ul class="list-ico">
-                        <li><span class="bi bi-geo-alt"></span> 329 WASHINGTON ST BOSTON, MA 02108</li>
-                        <li><span class="bi bi-phone"></span> (617) 557-0089</li>
-                        <li><span class="bi bi-envelope"></span> contact@example.com</li>
+                        <li><span class="bi bi-geo-alt"></span> St.Malush Kosova</li>
+                        <li><span class="bi bi-phone"></span>+38343903069</li>
+                        <li><span class="bi bi-envelope"></span> eltonvrajolli34@gmail.com</li>
                       </ul>
                     </div>
                     <div class="socials">
